--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="50sp"
-        android:textSize="45sp"
+        android:layout_height="wrap_content"
+        android:textSize="35sp"
         android:text="New Text"
         android:id="@+id/captionView"
         android:textColor="#fffaffff"
@@ -22,7 +22,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="40sp"
+        android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/textOfQuestionView"
         android:layout_below="@+id/captionView"
@@ -30,31 +30,32 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textSize="35sp"
-        style="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textSize="25sp"
         android:background="#ffd2e6ff"
         android:textColor="#ff000000" />
 
     <RadioGroup
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/textOfQuestionView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/optionsView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/optionsView"></RadioGroup>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/textOfQuestionView"
+        android:background="#ffd2e6ff"></RadioGroup>
 
-    <view
+    <martinmatko.anatomy.DrawView
+        android:id="@+id/drawView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         class="martinmatko.anatomy.DrawView"
-        android:id="@+id/drawView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
-
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/optionsView"
+        android:background="#ffffffff" />
 
 
 </RelativeLayout>
