--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,18 @@
         android:layout_below="@+id/textOfQuestionView"
         android:background="#ffd2e6ff"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pokračovat"
+        android:id="@+id/nextButtonView"
+        android:layout_below="@+id/optionsView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:onClick="onNextClick"
+        android:background="#ff0700ff" />
 
     <martinmatko.anatomy.DrawView
         android:id="@+id/drawView"
@@ -55,8 +67,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/optionsView"
+        android:layout_below="@+id/nextButtonView"
         android:background="#ffffffff" />
+
 
 
 </RelativeLayout>
