--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,9 +49,21 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Co je zvýrazňeno?"
+        android:id="@+id/highlightButtonView"
+        android:layout_below="@+id/optionsView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:onClick="onHighlightClick"
+        android:background="#ff02fdff" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Pokračovat"
         android:id="@+id/nextButtonView"
-        android:layout_below="@+id/optionsView"
+        android:layout_below="@+id/highlightButtonView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
