--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,17 @@
         android:id="@+id/captionView"
         android:textColor="#fffaffff"
         android:textIsSelectable="true"
-        android:background="#ff72ff00"
+        android:background="@color/green"
+        android:gravity="center"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:shadowColor="#000000"
+        android:shadowDx="0.0"
+        android:shadowDy="0.0"
+        android:shadowRadius="3.0" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -49,7 +54,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Co je zvýrazňeno?"
+        android:text="@string/highlighted"
         android:id="@+id/highlightButtonView"
         android:layout_below="@+id/optionsView"
         android:layout_alignParentLeft="true"
@@ -61,7 +66,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pokračovat"
+        android:text="@string/continueToNext"
         android:id="@+id/nextButtonView"
         android:layout_below="@+id/highlightButtonView"
         android:layout_alignParentLeft="true"
