--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="3"
+    android:weightSum="4"
     android:background="@color/black">
 
     <TextView
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Procvičování anatomie člověka na míru tvým znalostem."
+        android:text="@string/exercise"
         android:id="@+id/descriptionView"
         android:layout_gravity="center_horizontal"
         android:textColor="#000000"
@@ -33,39 +33,27 @@
         android:gravity="center"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/menuButton"
         android:text="@string/startTest"
         android:id="@+id/randomTestButton"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:onClick="onTestClicked"
-        android:background="@color/button"
-        android:textSize="30sp"
-        android:layout_margin="0.2sp" />
+        android:onClick="onTestClicked" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/menuButton"
         android:text="@string/selectSystem"
         android:id="@+id/systemButton"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:onClick="onSystemCategoriesClicked"
-        android:background="@color/button"
-        android:textSize="30sp"
-        android:layout_margin="0.2sp" />
+        android:onClick="onSystemCategoriesClicked" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/menuButton"
         android:text="@string/selectBody"
         android:id="@+id/locationButton"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:onClick="onBodyCategoriesClicked"
-        android:background="@color/button"
-        android:textSize="30sp"
-        android:layout_margin="0.2sp" />
+        android:onClick="onBodyCategoriesClicked" />
+
+    <Button
+        style="@style/menuButton"
+        android:text="@string/exit"
+        android:id="@+id/exitButton"
+        android:onClick="onExitClicked" />
 
 </LinearLayout>
