--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,44 @@
 <resources>
-
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    </style>
+
+    <style name="imageTileButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@color/gray</item>
+        <item name="android:adjustViewBounds">true</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:clickable">true</item>
+        <item name="android:onClick">onCategoryClicked</item>
+        <item name="android:layout_marginLeft">0.2sp</item>
+        <item name="android:layout_marginRight">0.2sp</item>
+        <item name="android:layout_marginTop">0.2sp</item>
+    </style>
+
+    <style name="imageTileLabel">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@color/gray</item>
+        <item name="android:adjustViewBounds">true</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:padding">1sp</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_marginLeft">0.2sp</item>
+        <item name="android:layout_marginRight">0.2sp</item>
+        <item name="android:layout_marginTop">0.2sp</item>
+    </style>
+
+    <style name="menuButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@color/button</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:layout_margin">0.2sp</item>
     </style>
 
 </resources>
