--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,26 +4,33 @@
     tools:context=".MainActivity"
     android:id="@+id/relativeLayout"
     style="@style/Base.TextAppearance.AppCompat.Headline">
+    <HorizontalScrollView android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="35sp"
+            android:text="New Text"
+            android:id="@+id/captionView"
+            android:textColor="#fffaffff"
+            android:textIsSelectable="true"
+            android:background="@color/green"
+            android:gravity="center"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:shadowColor="#000000"
+            android:shadowDx="0.0"
+            android:shadowDy="0.0"
+            android:shadowRadius="3.0"
+            style="@style/TextAppearance.StatusBar.EventContent.Title"
+            android:lines="1"
+            android:linksClickable="false"
+            android:theme="@style/Base.V21.Theme.AppCompat" />
+    </HorizontalScrollView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="35sp"
-        android:text="New Text"
-        android:id="@+id/captionView"
-        android:textColor="#fffaffff"
-        android:textIsSelectable="true"
-        android:background="@color/green"
-        android:gravity="center"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:shadowColor="#000000"
-        android:shadowDx="0.0"
-        android:shadowDy="0.0"
-        android:shadowRadius="3.0" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -62,7 +69,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:onClick="onHighlightClick"
-        android:background="#ff02fdff" />
+        android:background="@color/white" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,7 +81,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:onClick="onNextClick"
-        android:background="@color/button" />
+        android:background="@color/button"
+        android:textColor="@color/white"/>
 
     <martinmatko.anatomy.DrawView
         android:id="@+id/drawView"
