--- a/app/src/main/res/layout/categories_layout.xml
+++ b/app/src/main/res/layout/categories_layout.xml
@@ -17,65 +17,101 @@
             android:layout_weight="1"
             android:onClick="onTestClicked"
             android:background="@color/button" />
+        <ImageButton
+            android:id="@+id/btn_add"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="end"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="28dp"
+            android:alpha="0.0"
+            android:background="@drawable/btn_background"
+            android:contentDescription="@null"
+            android:elevation="1dp"/>
     </LinearLayout>
-    <LinearLayout
+    <TabHost
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="2">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/organSystems"
-            android:id="@+id/organSystems"
-            android:layout_gravity="center_horizontal"
-            android:textColor="#fffaffff"
-            android:textSize="40sp"
-            android:background="@color/green"
-            android:gravity="center|center_horizontal"
-            android:onClick="onSystemCategoriesLabelClicked"
-            android:clickable="true"
-            android:layout_weight="1"
-            android:shadowColor="#000000"
-            android:shadowDx="0.0"
-            android:shadowDy="0.0"
-            android:shadowRadius="3.0"
-            android:padding="1sp"
-            android:layout_marginLeft="0.2dp"
-            android:layout_marginRight="0.2dp" />
+        android:id="@+id/tabHost">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/bodyParts"
-            android:id="@+id/bodyParts"
-            android:background="@color/green"
-            android:gravity="center|center_horizontal"
-            android:layout_gravity="center_horizontal"
-            android:textColor="#fffaffff"
-            android:textSize="40sp"
-            android:clickable="true"
-            android:onClick="onBodyCategoriesLabelClicked"
-            android:layout_weight="1"
-            android:shadowColor="#000000"
-            android:shadowDx="0.0"
-            android:shadowDy="0.0"
-            android:shadowRadius="3.0"
-            android:padding="1sp"
-            android:layout_marginLeft="0.2dp"
-            android:layout_marginRight="0.2dp" />
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"></TabWidget>
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <LinearLayout
+                    android:id="@+id/tab1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/organSystems"
+                        android:id="@+id/organSystems"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="#fffaffff"
+                        android:textSize="40sp"
+                        android:background="@color/green"
+                        android:gravity="center|center_horizontal"
+                        android:onClick="onSystemCategoriesLabelClicked"
+                        android:clickable="true"
+                        android:shadowColor="#000000"
+                        android:shadowDx="0.0"
+                        android:shadowDy="0.0"
+                        android:shadowRadius="3.0"
+                        android:padding="1sp"
+                        android:layout_marginLeft="0.2dp"
+                        android:layout_marginRight="0.2dp" />
+                    </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/tab2"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/bodyParts"
+                        android:id="@+id/bodyParts"
+                        android:background="@color/green"
+                        android:gravity="center|center_horizontal"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="#fffaffff"
+                        android:textSize="40sp"
+                        android:clickable="true"
+                        android:onClick="onBodyCategoriesLabelClicked"
+                        android:shadowColor="#000000"
+                        android:shadowDx="0.0"
+                        android:shadowDy="0.0"
+                        android:shadowRadius="3.0"
+                        android:padding="1sp"
+                        android:layout_marginLeft="0.2dp"
+                        android:layout_marginRight="0.2dp" />
+                    </LinearLayout>
+            </FrameLayout>
+        </LinearLayout>
+    </TabHost>
     <ViewFlipper
     android:id="@+id/viewFlipper"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            android:orientation="vertical" >
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -88,119 +124,73 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal">
                     <TableRow>
-                        <ImageButton
-                            android:src="@drawable/s01"
-                            android:tag="01"
-                            style="@style/imageTileButton" />
-                        <ImageButton
-                            android:src="@drawable/s02"
-                            android:tag="02"
-                            style="@style/imageTileButton" />
-                        <ImageButton
-                            android:src="@drawable/s03"
-                            android:tag="03"
-                            style="@style/imageTileButton" />
-                    </TableRow>
-                    <TableRow>
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s01"
-                            android:tag="01" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s02"
-                            android:tag="02"  />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s03"
-                            android:tag="03"  />
-                    </TableRow>
-                    <TableRow>
-                        <ImageButton
-                            android:src="@drawable/s04"
-                            android:tag="04"
-                            style="@style/imageTileButton" />
-                        <ImageButton
-                            android:src="@drawable/s05"
-                            android:tag="05"
-                            style="@style/imageTileButton" />
-                        <ImageButton
-                            android:src="@drawable/s06"
-                            android:tag="06"
-                            style="@style/imageTileButton" />
-                    </TableRow>
-                    <TableRow>
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s04"
-                            android:tag="04" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s05"
-                            android:tag="05"  />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"  />
-                    </TableRow>
-                    <TableRow>
-                        <ImageButton
-                            android:src="@drawable/s07"
-                            android:tag="07"
-                            style="@style/imageTileButton" />
-                        <ImageButton
-                            android:src="@drawable/s08"
-                            android:tag="08"
-                            style="@style/imageTileButton" />
-                        <ImageButton
-                            android:src="@drawable/s09"
-                            android:tag="09"
-                            style="@style/imageTileButton" />
-                    </TableRow>
-                    <TableRow>
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s07"
-                            android:tag="07" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s08"
-                            android:tag="08"  />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s09"
-                            android:tag="09"  />
-                    </TableRow>
-                    <TableRow>
-                        <ImageButton
-                            android:src="@drawable/s11"
-                            android:tag="11"
-                            style="@style/imageTileButton" />
-                        <ImageButton
-                            android:src="@drawable/s12"
-                            android:tag="12"
-                            style="@style/imageTileButton" />
-                        <ImageButton
-                            android:src="@drawable/s15"
-                            android:tag="15"
-                            style="@style/imageTileButton" />
-                    </TableRow>
-                    <TableRow>
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s11"
-                            android:tag="11" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s12"
-                            android:tag="12"  />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s15"
-                            android:tag="15"  />
+
+                        <android.support.v7.widget.CardView
+                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                            android:layout_gravity="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            card_view:cardCornerRadius="4dp">
+
+                            <ImageButton
+                                android:src="@drawable/s07"
+                                android:tag="07"
+                                style="@style/imageTileButton" />
+
+                            <TextView
+                                style="@style/imageTileLabel"
+                                android:text="@string/s06"
+                                android:tag="06"  />
+                        </android.support.v7.widget.CardView>
+
+                        <android.support.v7.widget.CardView
+                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                            android:layout_gravity="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            card_view:cardCornerRadius="4dp">
+
+                            <ImageButton
+                                android:src="@drawable/s07"
+                                android:tag="07"
+                                style="@style/imageTileButton" />
+
+                            <TextView
+                                style="@style/imageTileLabel"
+                                android:text="@string/s06"
+                                android:tag="06"
+                                android:maxLines="2"
+                                android:singleLine="false" />
+                        </android.support.v7.widget.CardView>
+
+                        <android.support.v7.widget.CardView
+                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                            android:layout_gravity="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            card_view:cardCornerRadius="4dp">
+
+                            <ImageButton
+                                android:src="@drawable/s07"
+                                android:tag="07"
+                                style="@style/imageTileButton" />
+
+                            <TextView
+                                style="@style/imageTileLabel"
+                                android:text="@string/s06"
+                                android:tag="06"  />
+                        </android.support.v7.widget.CardView>
                     </TableRow>
                 </TableLayout></ScrollView>
-        </LinearLayout>
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
