animating menu, back button action, checking connection
animating menu, back button action, checking connection

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:id="@+id/relativeLayout"
     style="@style/Base.TextAppearance.AppCompat.Headline">
-    <HorizontalScrollView android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/captionViewScroll">
+
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="35sp"
-            android:text="New Text"
+            android:layout_weight="1.0"
+            android:textSize="25sp"
+            android:text="looooooooooooooong teeeeeeeeeeext"
             android:id="@+id/captionView"
             android:textColor="#fffaffff"
-            android:textIsSelectable="true"
             android:background="@color/green"
-            android:gravity="center"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:shadowColor="#000000"
             android:shadowDx="0.0"
             android:shadowDy="0.0"
             android:shadowRadius="3.0"
-            style="@style/TextAppearance.StatusBar.EventContent.Title"
-            android:lines="1"
-            android:linksClickable="false"
-            android:theme="@style/Base.V21.Theme.AppCompat" />
-    </HorizontalScrollView>
+            android:gravity="center"
 
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:scrollHorizontally="true"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="2" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -96,7 +90,42 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/nextButtonView"
         android:background="#ffffffff" />
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        xmlns:fab="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/multiple_actions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        fab:fab_addButtonColorNormal="@color/white"
+        fab:fab_addButtonColorPressed="@color/white_pressed"
+        fab:fab_addButtonPlusIconColor="@color/half_black"
+        fab:fab_labelStyle="@style/menu_labels_style"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:visibility="gone">
 
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/action_a"
+            android:onClick="setCategoriesMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/white"
+            fab:fab_title="Vybrat kapitolu"
+            fab:fab_colorPressed="@color/white_pressed"/>
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/action_b"
+            android:onClick="onTestClicked"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/white"
+            fab:fab_title="@string/startCategoriesTest"
+            fab:fab_colorPressed="@color/white_pressed"/>
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 
 </RelativeLayout>
