--- a/app/src/main/res/layout/my_layout.xml
+++ b/app/src/main/res/layout/my_layout.xml
@@ -3,7 +3,8 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:fab="http://schemas.android.com/apk/res-auto"
-android:layout_width="fill_parent"
+xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
 android:layout_height="fill_parent" >
 
     <TabHost
@@ -22,16 +23,17 @@ android:layout_height="fill_parent" >
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"></TabWidget>
+                android:layout_height="wrap_content"
+                android:background="@color/green"></TabWidget>
             <FrameLayout
                 android:id="@android:id/tabcontent"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/grey_100">
                 <LinearLayout
                     android:id="@+id/tab1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/white"
                     >
                     <ScrollView
                         android:layout_width="match_parent"
@@ -44,99 +46,72 @@ android:layout_height="fill_parent" >
                             android:layout_height="match_parent"
                             android:layout_gravity="center_horizontal">
                             <TableRow>
-
                                 <android.support.v7.widget.CardView
-                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                    android:layout_gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:adjustViewBounds="true"
-                                    android:scaleType="fitCenter"
-                                    card_view:cardCornerRadius="4dp">
-
+                                    style="@style/cardView"
+                                    card_view:cardElevation="5dp"
+                                    card_view:cardCornerRadius="4dp"
+                                    card_view:cardUseCompatPadding="true">
                                     <LinearLayout
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:orientation="vertical">
                                         <ImageButton
-                                            android:src="@drawable/s07"
-                                            android:tag="07"
-                                            style="@style/imageTileButton" />
-
+                                            style="@style/imageTileButton"
+                                            android:src="@drawable/s06"
+                                            android:tag="06" />
                                         <TextView
                                             style="@style/imageTileLabel"
                                             android:text="@string/s06"
-                                            android:tag="06"
-                                            android:background="@color/gray"/>
+                                            android:tag="06"/>
                                     </LinearLayout>
-
                                 </android.support.v7.widget.CardView>
-
                                 <android.support.v7.widget.CardView
-                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                    android:layout_gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:adjustViewBounds="true"
-                                    android:scaleType="fitCenter"
-                                    card_view:cardCornerRadius="4dp">
-
+                                    style="@style/cardView"
+                                    card_view:cardElevation="5dp"
+                                    card_view:cardCornerRadius="4dp"
+                                    card_view:cardUseCompatPadding="true">
                                     <LinearLayout
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:orientation="vertical">
                                         <ImageButton
-                                            android:src="@drawable/s07"
-                                            android:tag="07"
-                                            style="@style/imageTileButton" />
-
+                                            style="@style/imageTileButton"
+                                            android:src="@drawable/s06"
+                                            android:tag="06" />
                                         <TextView
                                             style="@style/imageTileLabel"
                                             android:text="@string/s06"
-                                            android:tag="06"
-                                            android:background="@color/gray"/>
+                                            android:tag="06"/>
                                     </LinearLayout>
-
                                 </android.support.v7.widget.CardView>
-
                                 <android.support.v7.widget.CardView
-                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                    android:layout_gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:adjustViewBounds="true"
-                                    android:scaleType="fitCenter"
-                                    card_view:cardCornerRadius="4dp">
-
+                                    style="@style/cardView"
+                                    card_view:cardElevation="5dp"
+                                    card_view:cardCornerRadius="4dp"
+                                    card_view:cardUseCompatPadding="true">
                                     <LinearLayout
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:orientation="vertical">
                                         <ImageButton
-                                            android:background="@color/gray"
-                                            android:src="@drawable/s07"
-                                            android:tag="07"
-                                            style="@style/imageTileButton" />
-
+                                            style="@style/imageTileButton"
+                                            android:src="@drawable/s06"
+                                            android:tag="06" />
                                         <TextView
                                             style="@style/imageTileLabel"
                                             android:text="@string/s06"
-                                            android:tag="06"
-                                            android:background="@color/gray"/>
+                                            android:tag="06"/>
                                     </LinearLayout>
-
                                 </android.support.v7.widget.CardView>
                             </TableRow>
+
                         </TableLayout></ScrollView>
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/tab2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/white"
+                    android:background="@color/grey_100"
                     >
                     <ScrollView
                         android:layout_width="match_parent"
@@ -147,73 +122,48 @@ android:layout_height="fill_parent" >
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_gravity="center_horizontal">
+
                             <TableRow>
-
                                 <android.support.v7.widget.CardView
-                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                    android:layout_gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:adjustViewBounds="true"
-                                    android:scaleType="fitCenter"
-                                    card_view:cardCornerRadius="4dp">
-
-                                    <ImageButton
-                                        android:src="@drawable/s08"
-                                        android:tag="07"
-                                        style="@style/imageTileButton" />
-
-                                    <TextView
-                                        style="@style/imageTileLabel"
-                                        android:text="@string/s08"
-                                        android:tag="08"  />
+                                    style="@style/cardView"
+                                    card_view:cardElevation="5dp"
+                                    card_view:cardCornerRadius="4dp"
+                                    card_view:cardUseCompatPadding="true">
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:orientation="vertical">
+                                        <ImageButton
+                                            style="@style/imageTileButton"
+                                            android:src="@drawable/s06"
+                                            android:tag="06" />
+                                        <TextView
+                                            style="@style/imageTileLabel"
+                                            android:text="@string/s06"
+                                            android:tag="06"/>
+                                    </LinearLayout>
                                 </android.support.v7.widget.CardView>
-
                                 <android.support.v7.widget.CardView
-                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                    android:layout_gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:adjustViewBounds="true"
-                                    android:scaleType="fitCenter"
-                                    card_view:cardCornerRadius="4dp">
-
-                                    <ImageButton
-                                        android:src="@drawable/s07"
-                                        android:tag="07"
-                                        style="@style/imageTileButton" />
-
-                                    <TextView
-                                        style="@style/imageTileLabel"
-                                        android:text="@string/s06"
-                                        android:tag="06"
-                                        android:maxLines="2"
-                                        android:singleLine="false" />
-                                </android.support.v7.widget.CardView>
-
-                                <android.support.v7.widget.CardView
-                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                    android:layout_gravity="center"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:adjustViewBounds="true"
-                                    android:scaleType="fitCenter"
-                                    card_view:cardCornerRadius="4dp">
-
-                                    <ImageButton
-                                        android:src="@drawable/s07"
-                                        android:tag="07"
-                                        style="@style/imageTileButton" />
-
-                                    <TextView
-                                        style="@style/imageTileLabel"
-                                        android:text="@string/s06"
-                                        android:tag="06"  />
+                                    style="@style/cardView"
+                                    card_view:cardElevation="5dp"
+                                    card_view:cardCornerRadius="4dp"
+                                    card_view:cardUseCompatPadding="true">
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:orientation="vertical">
+                                        <ImageButton
+                                            style="@style/imageTileButton"
+                                            android:src="@drawable/s06"
+                                            android:tag="06" />
+                                        <TextView
+                                            style="@style/imageTileLabel"
+                                            android:text="@string/s06"
+                                            android:tag="06"/>
+                                    </LinearLayout>
                                 </android.support.v7.widget.CardView>
                             </TableRow>
+
                         </TableLayout></ScrollView>
                 </LinearLayout>
             </FrameLayout>
