--- a/app/src/main/res/values/strings_activity_login.xml
+++ b/app/src/main/res/values/strings_activity_login.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Strings related to login -->
-    <string name="app_decription">Your awesome app</string>
+    <string name="app_decription">Přihlaste se</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign In</string>
