--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,6 @@
     <style name="imageTileButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:layout_weight">1</item>
         <item name="android:adjustViewBounds">true</item>
         <item name="android:scaleType">fitCenter</item>
         <item name="android:background">@color/gray</item>
@@ -29,22 +28,18 @@
 
     <style name="imageTileLabel">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:adjustViewBounds">true</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:scaleType">fitCenter</item>
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
-        <item name="android:gravity">bottom|center</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@color/white</item>
+
     </style>
 
-    <style name="menuButton">
+    <style name="cardView">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:background">@color/button</item>
-        <item name="android:textSize">30sp</item>
-        <item name="android:layout_margin">0.2sp</item>
     </style>
-
 </resources>
