--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_email"
+                    android:hint="User name"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:singleLine="true" />
@@ -80,7 +80,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:textStyle="bold"
-                android:backgroundTint="#d9534f" />
+                android:backgroundTint="#d9534f"
+                android:onClick="onGoogleClicked" />
             <Button
                 android:id="@+id/fb_sign_in_button"
                 style="?android:textAppearanceSmall"
@@ -89,7 +90,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:textStyle="bold"
-                android:backgroundTint="#428BCA" />
+                android:backgroundTint="#428BCA"
+                android:onClick="onFacebookClicked"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
