--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/grey_100"
     tools:context="martinmatko.anatomy.LanguageActivity">
 
     <RadioGroup
@@ -19,14 +20,14 @@
         android:gravity="center_vertical">
 
         <RadioButton
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/czech"
             android:id="@+id/czech"
             android:button="@drawable/czech"
             android:textSize="50sp" />
         <RadioButton
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/english"
             android:id="@+id/english"
